Create Test Framework
Create Test Framework that provides InGui Test Menu that contains Clear Color Test and 2D Texture Test, remove junk from application file

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -1,8 +1,12 @@
 [Window][Debug##Default]
-Pos=538,16
-Size=419,110
+Pos=525,25
+Size=415,80
 
 [Window][Hello, world!]
 Pos=392,68
 Size=482,184
+
+[Window][Test]
+Pos=369,40
+Size=581,131
 
